--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 		<h2 id="fistBtn">👊</h2>
 	</div>
 </div>
+<footer>
+	<h4>real facts from api.chucknorris.io</h4>
+</footer>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
