--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	</div>
 </div>
 <footer>
-	<h4>real facts from api.chucknorris.io</h4>
+	<h4>site by <a href="https://github.com/steviesocks">@steviesocks</a>. real facts from api.chucknorris.io</h4>
 </footer>
 <script type="text/javascript" src="script.js"></script>
 </body>
