fixed word wrapping

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<div class="frame">
 		<img class="photo" src="images/twobirds.jpg">
 		<div id="joke-bubble" class="speechBbl">
-			<p id="joke-text">Guess what.</p>
+			<p id="joke-text" class="">Guess what.</p>
 		</div>
 		<div id="reaction-bubble" class="speechBbl">
-			<p id="reaction-text">wut</p>
+			<p id="reaction-text" class="">wut</p>
 		</div>
 	</div>
 		<div class="fist">
